<resources>
    <string name="app_name">VIANDS</string>
    <string name="loading_screen_logo">loading Screen Logo</string>
    <string name="default_food_image">Default Food image</string>
    <string name="product_name">Product Name</string>
    <string name="nutritional_value_label">Nutritional Value :</string>
    <string name="nutritional_value">A</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_button">START</string>
    <string name="recent_products_label">Recent Products</string>
    <string name="recent_product_list_description">This list contains a list of products recently scanned by you</string>
    <string name="scan_new_product">SCAN NEW PRODUCT</string>
    <string name="type_barcode">Type Barcode</string>
    <string name="manage_custom_lists_button">Manage Custom Lists Button</string>
    <string name="type_barcode_button">Type Barcode</string>
    <string name="_1">1</string>
    <string name="nutritional_value_title">Nutritional Value |</string>
    <string name="nutirtionalValue">A</string>
    <string name="just_a_food_banner">Just a food Banner</string>
    <string name="enter_barcode_number_here"><i>Enter Barcode Number Here</i></string>
    <string name="search_product">Search Product</string>
    <string name="cancel">CANCEL</string>
    <string name="warning_about_product_info">The data provided to you by this app are retrieved from the Open Food Facts database. No guarantees can be made for the accuracy, completeness, or reliability of the information provided. The data are provided “as is” and the originating source for the data (Open Food Facts) is not liable for any damages arising out of the use of the data.</string>
    <string name="create_list_background">create list background</string>
    <string name="create_new_list">CREATE NEW LIST</string>
    <string name="custom_list_1">Custom List #1</string>
    <string name="_6_items">6 Items</string>
    <string name="warning_sign">warning Sign</string>
    <string name="nutritional_value_image">Nutritional Value Image</string>
    <string name="nova_grade_image">Nova Grade Image</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="details_about_the_ingreidents_are_displayed_here">Details about the ingredients are displayed here. I am
        intentionally making this text longer just for testing purposes of the Viands Application</string>
    <string name="nutrients_label">Nutrients</string>
    <string name="all_the_nutrients_of_the_product_will_be_listed_here">All the nutrients of the product will be listed here. I am
        intentionally making this text longer just for testing purposes of the Viands Application</string>
    <string name="save_product">SAVE PRODUCT</string>
    <string name="list_name">List Name</string>
    <string name="listId">#103</string>
    <string name="delete">Delete</string>
    <string name="delete_button">Delete Button</string>
    <string name="enter_list_name"><i>Enter List Name</i></string>
    <string name="enter_list_description"><i>Enter List Description</i></string>
    <string name="barcode_figure">barcode figure</string>
    <string name="save_list">SAVE LIST</string>
    <string name="we_are_searching_the_database">We Are Searching The Database</string>
    <string name="view_results">View Results</string>
    <string name="the_data_provided_to_you_by_this_app_are_retrieved_from_the_open_food_facts_database_no_guarantees_can_be_made_for_the_accuracy_completeness_or_reliability_of_the_information_provided_the_data_are_provided_as_is_and_the_originating_source_for_the_data_open_food_facts_is_not_liable_for_any_damages_arising_out_of_the_use_of_the_data">The data provided to you by this app are retrieved from the Open Food Facts database. No guarantees can be made for the accuracy, completeness, or reliability of the information provided. The data are provided “as is” and the originating source for the data (Open Food Facts) is not liable for any damages arising out of the use of the data.</string>
    <string name="info_symbol">Info Symbol</string>
    <string name="open_food_facts_symbol">Open Food facts Symbol</string>
    <string name="remove_product">Remove Product</string>
    <string name="tip_scanning_the_barcode_is_a_lot_easier_than_typing">Tip : Scanning the Barcode is a lot easier than Typing :)</string>
    <string name="product_already_exists_in_your_lists">* Product Already Exists In Your Lists</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="select_list_to_add_this_product">Select List To Add This Product</string>
    <string name="add_new_list_button">Add New List Button</string>
    <string name="save_add_product"><![CDATA[SAVE & ADD PRODUCT]]></string>
    <string name="creating_new_list">Creating new List</string>
    <string name="product_exists">PRODUCT EXISTS</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="editting_list">Editting List...</string>
    <string name="ediiting_list">Ediiting List</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="change_list_label">CHANGE LIST</string>
    <string name="delete_product">Delete Product</string>
    <string name="edit_list">Edit List</string>
    <string name="delete_lists">Delete Lists</string>
    <string name="we_have_searched_the_database">We have Searched The Database</string>
    <string name="empty_list_image">empty List Image</string>
    <string name="looks_like_you_don_t_have_lists_lets_create_one">Looks Like You Don\'t Have Lists, Lets Create One</string>
    <string name="tip_scanning_the_barcode_is_a_lot_easier_than_typing_new">Tip : Scanning the Barcode Is A Lot Easier Than Typing :)</string>
    <string name="cyan">CYAN</string>
    <string name="list_colour">List Colour</string>
    <string name="displaying_offline_data_refresh_for_live_data">Displaying Offline Data. Refresh For Live Data ...</string>
    <string name="refresh_product">Refresh Product</string>
    <string name="update_product">Update Product</string>
    <string name="login_to_google_account">Login to Google Account</string>
    <string name="welcome">WELCOME</string>
    <string name="to_viands">to Viands</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="go_back">GO BACK</string>
    <string name="sign_out">Sign Out</string>
    <string name="place_holder_image">place holder image</string>
    <string name="john_doe">John Doe</string>
    <string name="backup_data">Backup Data</string>
    <string name="restore_backup">Restore Backup</string>
    <string name="my_account">My Account</string>
    <string name="last_backup">Last Backup</string>
    <string name="may_27_2021_at_11_27_59_am_utc_530">May 27, 2021 at 11:27:59 AM UTC+530</string>
    <string name="auto_backup">Auto Backup</string>
    <string name="enable_auto_backups">Enable Auto Backups</string>
    <string name="remember_user">Remember User</string>
    <string name="remember_user_when_login_in">Remember User when Logging In</string>
    <string name="loading_last_backup">...</string>
    <string name="no_backups_created">You have Not Created Any Backups Yet !</string>
    <string name="auto_backup_enabled">AUTO BACKUP IS ENABLED</string>
    <string name="this_will_be_displayed_when_the_list_is_empty">this will be displayed when the list is empty</string>
    <string name="list_is_empty">LIST IS EMPTY !</string>
</resources>