<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchingTheDatabse">

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_have_searched_the_database"
        android:textColor="@color/viands_confirm_button_skin"
        app:layout_constraintBottom_toTopOf="@+id/descriptionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.259" />

    <Button
        android:id="@+id/viewResultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="112dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/view_results"
        android:textColor="#000000"
        app:backgroundTint="@color/viands_confirm_button_skin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#00BCD4" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:gravity="center_horizontal"
        android:text="@string/the_data_provided_to_you_by_this_app_are_retrieved_from_the_open_food_facts_database_no_guarantees_can_be_made_for_the_accuracy_completeness_or_reliability_of_the_information_provided_the_data_are_provided_as_is_and_the_originating_source_for_the_data_open_food_facts_is_not_liable_for_any_damages_arising_out_of_the_use_of_the_data"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/openFoodFactsImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/info_symbol"
        app:layout_constraintBottom_toTopOf="@+id/nameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_info_24"
        app:tint="#99F331" />

    <ImageView
        android:id="@+id/openFoodFactsImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/open_food_facts_symbol"
        app:layout_constraintBottom_toTopOf="@+id/viewResultButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/open_food_facts_symbol" />

</androidx.constraintlayout.widget.ConstraintLayout>