<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listItemBackground"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:contentDescription="@string/delete_button"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/_1"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.426" />

            <ImageView
                android:id="@+id/placeHolderImage"
                android:layout_width="85dp"
                android:layout_height="78dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/default_food_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/index"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.238"
                app:srcCompat="@drawable/default_food_img" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.276"
                app:layout_constraintStart_toEndOf="@+id/placeHolderImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4">

                <TextView
                    android:id="@+id/productName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/product_name"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="0dp"
                        android:text="@string/nutritional_value_title"
                        android:textColor="#D6D5D5"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/nutritionalValue"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:paddingLeft="4dp"
                        android:text="@string/nutirtionalValue"
                        android:textColor="#96E43B"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="350dp"
                android:layout_height="1dp"
                android:layout_marginTop="35dp"
                android:background="#80FFFFFF"
                android:paddingTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>